# fraud-detection-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
configs/: config.yaml
docker/: entrypoint.sh
src/fraud_detection/: __init__.py  config.py  features.py  metrics.py  train.py
src/fraud_detection/api/: main.py  ui.py
src/fraud_detection/data/: generate.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
tests/: test_api.py  test_leakage_and_thresholds.py  test_pipeline.py
